--- a/package.json
+++ b/package.json
@@ -46,5 +46,5 @@
   "devDependencies": {
     "gh-pages": "^3.2.3"
   },
-  "homepage": "http://deeptiranjandrb.github.io/portfolio"
+  "homepage": "http://deeptiranjan.in"
 }
